fix add button alignment

--- a/styles/index.css
+++ b/styles/index.css
@@ -211,7 +211,7 @@ h1 {
 
 .button-add {
   float: right;
-  margin: 1.6875rem 0 0 0.3125rem;
+  margin: 2rem 0 0 0.3125rem;
 }
 
 /* List */
